# paperflow

./: .dockerignore  .env.example  .gitignore  BACKEND_P0_COMPLETE.md  CLAUDE.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FRONTEND_P0_COMPLETE.md  LANDING_PAGE_UPDATE.md  LICENSE  PROCESSING_DIAGNOSIS.md  README.md  STORAGE_FIX.md  TASK_A_FRONTEND_P0.md  TASK_B_BACKEND_P0.md  app.py  docker-compose.yml  plan.md  pyproject.toml  railway.toml  requirements.txt  vercel.json
.github/workflows/: docker-publish.yml
api/: config.py  errors.py  main.py  models.py
api/middleware/: rate_limit.py
api/routes/: feedback.py  jobs.py  parse.py  submit.py
api/services/: emailer.py  local_cli_parser.py  marker.py  marker_local_parser.py  mineru_parser.py  packager.py  paddleocr_vl_parser.py  parsers.py  postprocess.py  pymupdf_parser.py  ratelimit.py  storage.py
core/: ai_enhance.py  converter.py  epub_builder.py  epub_style.css  layout_analyzer.py  marker_client.py  pdf_detector.py  text_cleaner.py  text_pipeline.py
docs/: unraid.md
frontend/: app.html  index.html  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  landing.css  layout.tsx  page.tsx
mcp-server/: README.md  package-lock.json  package.json
mcp-server/benchmark/: README.md  results.csv  results.template.csv
mcp-server/scripts/: benchmark_report.js
mcp-server/src/: index.js
paperflow_postprocess/: __init__.py
tests/: test_paperflow_postprocess.py  test_parser_readiness.py  test_parser_selection.py  test_pymupdf_parser.py
unraid/: paperflow.xml
web/: payment.py  storage.py
(+19 files in other folders)
